# agent-sandbox

./: .gitignore  Cargo.toml  README.md
src/: diff_engine.rs  error.rs  lib.rs  main.rs  permissions.rs  sandbox.rs  virtual_fs.rs
tests/: smoke_test.rs
